--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.app {
   display: grid;
   margin: 0 auto;
   width: 1200px;
@@ -11,7 +11,7 @@
   grid-gap: 10px;
 }
 
-.App-Content {
+.app-content {
   grid-area: c;
   background-color: aqua;
 }
