--- a/src/Components/Dialog/Name/Names.module.css
+++ b/src/Components/Dialog/Name/Names.module.css
@@ -1,4 +1,9 @@
 .names {
-    font-size: 32px;
-    color: #f77;
+    grid-area: n;
+    padding: 5px;
+}
+
+.names a {
+    text-decoration: none;
+    color: black;
 }
