--- a/src/Components/Dialog/Names/Names.module.scss
+++ b/src/Components/Dialog/Names/Names.module.scss
@@ -1,9 +1,9 @@
 .dialogName {
     padding: 5px;
-}
-
-.dialogName a {
+    
+    a {
     text-decoration: none;
     color: white;
     font-size: 22px;
+    }
 }
