--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,12 @@
 .app {
-  display: grid;
-  margin: 0 auto;
   width: 1200px;
+  margin: 0 auto;
+}
+
+.main-content {
+  display: grid;
+  //margin: 0 auto;
+ // width: 1200px;
   grid-template-areas: 
   "h h"
   "n c";
@@ -14,5 +19,12 @@
 .app-content {
   grid-area: c;
   background-color: gray;
+}
+
+.main-content-2 {
+  display: grid;
+ // width: 1200px;
+  //padding-left: 65px;;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
