--- a/src/Components/Koktel/Koktel-Item/Koktel-Item.module.scss
+++ b/src/Components/Koktel/Koktel-Item/Koktel-Item.module.scss
@@ -1,6 +1,6 @@
-li {
-  width: 150px;
-  border: 1px solid blue;
+.itemLi {
+  width: 155px;
+  border: 1px solid red;
   padding: 5px;
   margin: 3px;
   display: flex;
